Demo-3/binding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "image-tag-test.profcloud.com"
spec:
  policyName: "image-policy.profcloud.com"
  paramRef:
    name: "image-tag.profcloud.com"
    namespace: default
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: test
