Demo-3/policy.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: "image-policy.profcloud.com"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: profcloud.com/v1
    kind: ExcludeTag
  matchConstraints:
    resourceRules:
      - apiGroups:   ["apps"]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["deployments"]
  validations:
    - expression: "object.spec.template.spec.containers.all(c, !c.image.endsWith(params.spec.excludeTags))"
      message: "cannot use the latest tag"
